--- a/css/style.css
+++ b/css/style.css
@@ -1,136 +1,131 @@
 @font-face {
-    font-family: "br_omega";
-    src: url("./font/br_omega-medium-webfont.woff");
+	font-family: 'br_omega';
+	src: url('./font/br_omega-medium-webfont.woff');
 }
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-
 body {
-    font-family: "br_omega", sans-serif;
-    color: #ffffff;
-    background: linear-gradient(to left, #9d33f3, #8d33f3);
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100vh;
+	font-family: 'br_omega', sans-serif;
+	color: #ffffff;
+	background: linear-gradient(to left, #9d33f3, #8d33f3);
+	background-size: cover;
+	background-repeat: no-repeat;
+	min-height: 100vh;
 }
 .container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+	display: flex;
+	justify-content: center;
+	width: 100%;
 
-    margin-right: auto;
-    margin-left: auto;
+	margin-right: auto;
+	margin-left: auto;
 }
 .glass-rect {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 60vw;
-    margin-top: 10vh;
-    margin-bottom: 30px;
-    padding: 50px;
-    border: 1px solid rgb(235, 233, 233);
-    background: linear-gradient(111.29deg, rgba(255, 255, 255, 0.53) -1.83%, rgba(255, 255, 255, 0) 109.95%);
-    box-shadow: 50px 60px 100px rgba(0, 0, 0, 0.05);
-    backdrop-filter: blur(70px);
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 60vw;
+	margin-top: 10vh;
+	margin-bottom: 30px;
+	padding: 50px;
+	border: 1px solid rgb(235, 233, 233);
+	background: linear-gradient(
+		111.29deg,
+		rgba(255, 255, 255, 0.53) -1.83%,
+		rgba(255, 255, 255, 0) 109.95%
+	);
+	box-shadow: 50px 60px 100px rgba(0, 0, 0, 0.05);
+	backdrop-filter: blur(70px);
+	border-top-left-radius: 40px;
+	border-top-right-radius: 40px;
+	border-bottom-left-radius: 40px;
+	border-bottom-right-radius: 40px;
 }
 .main {
-    font-weight: normal;
-    display: inline-block;
-    padding: 20px;
-    width: 50%;
+	font-weight: normal;
+	display: inline-block;
+	padding: 20px;
+	width: 50%;
 }
 .main-title {
-    font-size: 35px;
-    margin-bottom: 15px;
+	font-size: 35px;
+	margin-bottom: 15px;
 }
 .main-desc {
-    font-size: 17px;
-    line-height: 25px;
+	font-size: 17px;
+	line-height: 25px;
 }
 .btn-boost {
-    margin-top: 30px;
-    border: 0;
-    width: 120px;
-    height: 50px;
-    font-size: 17px;
-    color: #ffffff;
-    background: linear-gradient(111.29deg, rgba(255, 255, 255, 0.53) -1.83%, rgba(255, 255, 255, 0) 109.95%);
-    box-shadow: 50px 60px 100px rgba(0, 0, 0, 0.05);
-    border-radius: 10px;
-    font-family: "br_omega", sans-serif;
-    border: 1px solid rgb(235, 233, 233);
-    cursor: pointer;
-    transition: 0.7s;
+	margin-top: 30px;
+	border: 0;
+	width: 120px;
+	height: 50px;
+	font-size: 17px;
+	color: #ffffff;
+	background: linear-gradient(
+		111.29deg,
+		rgba(255, 255, 255, 0.53) -1.83%,
+		rgba(255, 255, 255, 0) 109.95%
+	);
+	box-shadow: 50px 60px 100px rgba(0, 0, 0, 0.05);
+	border-radius: 10px;
+	font-family: 'br_omega', sans-serif;
+	border: 1px solid rgb(235, 233, 233);
+	cursor: pointer;
+	transition: 0.7s;
 }
-
 .btn-boost:hover {
-    border-color: #9d33f3;
+	border-color: #9d33f3;
 }
-
 .img-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* margin-top: 5vh; */
-    text-align: center;
-    width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	width: 50%;
 }
-
 .feat-img {
-    width: 90%;
+	width: 90%;
 }
-
 form {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 input {
-    background: transparent;
-    border-radius: 6px;
-
-    border: 1px solid white;
-    box-shadow: 5px 5px 30px rgb(0 0 0 / 20%);
-    outline: none;
-    padding: 15px;
-    font-size: 17px;
-    color: white;
-    margin-top: 15px;
-    transition: 0.5s;
+	background: transparent;
+	border-radius: 6px;
+	border: 1px solid white;
+	box-shadow: 5px 5px 30px rgb(0 0 0 / 20%);
+	outline: none;
+	padding: 15px;
+	font-size: 17px;
+	color: white;
+	margin-top: 15px;
+	transition: 0.5s;
 }
-
 input::placeholder {
-    color: white;
+	color: white;
 }
-
 input:hover {
-    border-color: #9d33f3;
+	border-color: #9d33f3;
 }
-
 @media screen and (max-width: 1200px) {
-  
-    .glass-rect {
-        margin-top: 20vh;
-        padding: 25px;
-    }
-    .main {
-        margin-top: 5vh;
-    }
-    .main-title {
-        font-size: 30px;
-    }
+	.glass-rect {
+		margin-top: 20vh;
+		padding: 25px;
+	}
+	.main {
+		margin-top: 5vh;
+	}
+	.main-title {
+		font-size: 30px;
+	}
 }
-
 @media screen and (max-width: 992px) {
-  .main,.img-wrapper{
-      width: 100%;
-  }
-  
+	.main,
+	.img-wrapper {
+		width: 100%;
+	}
 }
